--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/inquirer": "^9.0.7",
     "@types/lodash-es": "^4.17.12",
     "@types/ramda": "^0.29.10",
+    "@types/update-notifier": "^6.0.8",
     "adm-zip": "^0.5.10",
     "fs-extra": "^11.2.0",
     "globby": "^14.0.1",
@@ -59,6 +60,7 @@
     "ramda": "^0.29.1",
     "simple-git": "^3.22.0",
     "tapable": "^2.2.1",
+    "update-notifier": "^7.0.0",
     "yargs": "^17.7.2",
     "zod": "^3.22.4"
   },
