feat: update deps

--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "link-exists": "^1.2.2",
     "lodash-es": "^4.17.21",
     "node-fetch": "^3.3.2",
+    "nypm": "^0.3.6",
     "ora": "^8.0.1",
     "picocolors": "^1.0.0",
     "ramda": "^0.29.1",
+    "rslog": "^1.2.1",
     "simple-git": "^3.22.0",
     "tapable": "^2.2.1",
     "update-notifier": "^7.0.0",
