--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "tsup",
     "start": "tsx src/index.ts",
     "release": "pnpm publish",
-    "bump:version": "bumpp",
+    "bump:version": "bumpp && release",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "pnpm run build"
   },
