--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "nypm": "^0.3.6",
     "ora": "^8.0.1",
     "picocolors": "^1.0.0",
+    "picomatch": "^4.0.2",
     "ramda": "^0.29.1",
     "rslog": "^1.2.1",
     "simple-git": "^3.22.0",
@@ -64,14 +65,15 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/update-notifier": "^6.0.8",
+    "@antfu/eslint-config": "^2.1.2",
     "@types/adm-zip": "^0.5.5",
     "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^9.0.7",
     "@types/lodash-es": "^4.17.12",
-    "@types/ramda": "^0.29.10",
-    "@antfu/eslint-config": "^2.1.2",
     "@types/node": "^20.10.1",
+    "@types/picomatch": "^2.3.3",
+    "@types/ramda": "^0.29.10",
+    "@types/update-notifier": "^6.0.8",
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
